--- a/monitoring/templates/analytics/analytics.html
+++ b/monitoring/templates/analytics/analytics.html
@@ -1,5 +1,6 @@
 <!-- monitoring/templates/analytics/analytics.html -->
 {% extends 'base.html' %}
+{% load template_filters %}
 
 {% block title %}Аналітика{% endblock %}
 
