--- a/monitoring/templates/base.html
+++ b/monitoring/templates/base.html
@@ -113,6 +113,14 @@
         tr.failed {
             background-color: rgba(220, 53, 69, 0.1) !important;
         }
+
+        #logout-button {
+            background-color: transparent;
+            border: none;
+            font: inherit;
+            cursor: pointer;
+            outline: inherit;
+        }
     </style>
 
     {% block extra_css %}{% endblock %}
@@ -188,9 +196,10 @@
                             {% endif %}
 
                             <li>
-                                <a class="dropdown-item" href="{% url 'logout' %}">
-                                    <i class="bi bi-box-arrow-right"></i> Вийти
-                                </a>
+                                <form class="dropdown-item" method="post" action="{% url 'logout' %}">
+                                    {% csrf_token %}
+                                    <i class="bi bi-box-arrow-right"></i><button type="submit" id="logout-button">Вийти</button>
+                                </form>
                             </li>
                         </ul>
                     </li>
@@ -287,7 +296,7 @@
                 {% block main_content %}{% endblock %}
             </div>
             {% else %}
-            <!-- Full-width content when not authenticated -->
+            <!-- Full-width content when is not authenticated -->
             <div class="col-12">
                 {% block content %}{% endblock %}
             </div>
