Templates updates, scheduler views fixes, new simulated history

--- a/monitoring/templates/dashboard/partials/stats.html
+++ b/monitoring/templates/dashboard/partials/stats.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="mt-2 small">
-                <span class="text-primary"><i class="bi bi-clock"></i> {{ stats.retention_days }} днів зберігання</span>
+                <span class="text-primary"><i class="bi bi-clock"></i> {{ stats.retention_days }} дн. зберігання</span>
             </div>
         </div>
     </div>
