--- a/monitoring/templates/backups/backups_list.html
+++ b/monitoring/templates/backups/backups_list.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="col-md-2">
-                    <label for="reason" class="form-label">Причина</label>
+                    <label for="reason" class="form-label">Вид</label>
                     <select class="form-select" id="reason" name="reason">
                         <option value="" {% if reason == '' %}selected{% endif %}>Всі</option>
                         <option value="ANOMALY" {% if reason == 'ANOMALY' %}selected{% endif %}>Аномалія</option>
