--- a/monitoring/templates/base.html
+++ b/monitoring/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Система моніторингу енергії{% endblock %}</title>
+    <title>{% block title %}Моніторинг стану енергосистеми{% endblock %}</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -147,10 +147,10 @@
 </head>
 <body>
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top">
+    <nav class="col-12 navbar navbar-expand-md navbar-dark bg-primary sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'dashboard' %}">
-                <i class="bi bi-lightning-charge-fill"></i> Моніторинг Енергії
+                <i class="bi bi-lightning-charge-fill"></i> Моніторинг стану енергосистеми
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
@@ -210,6 +210,11 @@
                             <li>
                                 <a class="dropdown-item" href="{% url 'system_settings' %}">
                                     <i class="bi bi-gear"></i> Налаштування системи
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'scheduler_status' %}">
+                                    <i class="bi bi-clock"></i> Керувати планувальником
                                 </a>
                             </li>
                             <li><hr class="dropdown-divider"></li>
