--- a/monitoring/templates/settings/scheduler_status.html
+++ b/monitoring/templates/settings/scheduler_status.html
@@ -163,22 +163,22 @@
                                 </button>
                             </form>
                         </div>
-                        <div class="col-md-4">
-                            <form method="post" action="{% url 'run_simulation_anomaly' %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-outline-danger d-flex justify-content-center align-items-center w-100">
-                                    <i class="bi bi-exclamation-triangle me-2"></i> Симулювати аномалію
-                                </button>
-                            </form>
-                        </div>
-                        <div class="col-md-4">
-                            <form method="post" action="{% url 'run_simulation_abnormal_prediction' %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-outline-warning d-flex justify-content-center align-items-center w-100">
-                                    <i class="bi bi-graph-up me-2"></i> Симулювати аномальний прогноз
-                                </button>
-                            </form>
-                        </div>
+{#                        <div class="col-md-4">#}
+{#                            <form method="post" action="{% url 'run_simulation_anomaly' %}">#}
+{#                                {% csrf_token %}#}
+{#                                <button type="submit" class="btn btn-outline-danger d-flex justify-content-center align-items-center w-100">#}
+{#                                    <i class="bi bi-exclamation-triangle me-2"></i> Симулювати аномалію#}
+{#                                </button>#}
+{#                            </form>#}
+{#                        </div>#}
+{#                        <div class="col-md-4">#}
+{#                            <form method="post" action="{% url 'run_simulation_abnormal_prediction' %}">#}
+{#                                {% csrf_token %}#}
+{#                                <button type="submit" class="btn btn-outline-warning d-flex justify-content-center align-items-center w-100">#}
+{#                                    <i class="bi bi-graph-up me-2"></i> Симулювати аномальний прогноз#}
+{#                                </button>#}
+{#                            </form>#}
+{#                        </div>#}
                     </div>
 
                     <hr>
